swagger polish
